[tool.poetry]
name = "connector-twilio"
version = "0.1.1"
description = "This connector will send sms using the Twilio"
authors = ["buhariabubakar <buharikwmbo@yahoo.com>"]
readme = "README.md"
packages = [{include = "connector_twilio", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
spiffworkflow-connector-command = {git = "https://github.com/sartography/spiffworkflow-connector-command.git", rev = "main"}
twilio = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
